[package]
name = "ir_catalogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ir_core = {path = "../core"}
runtime = {path = "../runtime"}
dyn_type = {path = "../../../dyn_type"}
env_logger = "0.9.0"
ir_common = {path = "../common"}
lazy_static = "1.3.0"
log = "0.4"
pegasus_client = {path = "../../../engine/pegasus/clients/rust/client"}
pegasus_server = {path = "../../../engine/pegasus/server-v0"}
pegasus = {path = "../../../engine/pegasus/pegasus"}
prost = "0.9"
serde = "1.0"
serde_json = "1.0"
vec_map = { version = "0.8.2", features = ["serde"] }
ascii = "1.0"
fast-math = "0.1.1"

[features]
default = []
proto_inplace = ["ir_common/proto_inplace"]